# win-sandbox

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  check_layers.ps1  go.mod  go.sum  main.go
.github/workflows/: ci.yml  release.yml
cmd/: check.go  create.go  delete.go  exec.go  list.go  root.go  run.go  showconfig.go  state.go  vars.go
docs/: docker-image-storage.md  hcsshim-api-layers.md  hcsshim-api-relationships.md  hcsshim-cmd-reference.md  hcsshim-internal-api.md  hcsshim-public-api.md  layer-management.md  troubleshooting.md  vmcompute-api-reference.md
internal/config/: config.go
pkg/docker/: layers.go  layers_test.go
pkg/layer/: index.go  pull.go  pull_test.go  store.go
pkg/sandbox/: config.go  detect.go  elevate.go  hcs.go  interactive.go  layer.go  sandbox.go
pkg/state/: store.go
scripts/: README.md  check_docker_layers.ps1  check_env.ps1  check_layers.ps1  export_layers.ps1  find_docker_layers.ps1
src/: config.rs  hcs.rs  main.rs  sandbox.rs
