[package]
name = "win-sandbox"
version = "0.1.0"
edition = "2021"
description = "Lightweight Windows Sandbox clone using Hyper-V HCS API + Rust"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
widestring = "1"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
colored = "3.1.1"

# Windows API bindings
[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
]

[[bin]]
name = "wsandbox-vm"
path = "src/main.rs"
